less code pro audit xwen2